@@ -1,4 +1,4 @@
-Version=1.2.1025
+Version=1.2.1026
 ModuleNamespace=IPSLibrary::app::hardware::Plugwise
 
 [App]
