@@ -1,3 +1,7 @@
+Version=1.2.1026
+ - Anzahl der Spalten und Zeilen in der Systemsteuerung variabel
+  define ( 'UEBERSICHTSPALTEN' , 3      );
+  define ( 'UEBERSICHTZEILEN'  , 10      );
 Version=1.2.1025
  - Anzeige der Pingwerte , RSSISource , RSSITarget
 Version=1.2.1024
